# blastdbbuilder

./: .blastdbbuilder.pid  .blastdbbuilder_gui.state.json  .gitignore  CITATION.cff  README.md  install.sh  pyproject.toml  setup.py
GUI/: README.md  README.txt  README_FIRST.txt  install.sh  uninstall.sh
GUI/app/: README.md  blastdbbuilder_gui_tk.py  pyproject.toml
GUI/app/blastdbbuilder_gui/: __init__.py  desktop.py  gui.py
GUI/app/blastdbbuilder_src/: pyproject.toml
GUI/app/blastdbbuilder_src/blastdbbuilder/: cli.py
blastdbbuilder/: __init__.py  cli.py  install.sh
blastdbbuilder/scripts/: Plant_Reference_Genome_Downloader_RESUME_mode.sh  archaea_ref_genomes_pipeline_bioinf_AP.sh  bacteria_ref_genomes_pipeline_resume_bioinf_AP.sh  fasta-concat_20251014_AP.sh  fungi_ref_genomes_pipeline_bioinf_AP.sh  makeblastdb_bioinf_AP_20251003_v5_seqkit_RESUME_Alias_AutoDetect_v3_NameLikeNCBI2.sh  makeblastdb_bioinf_AP_20251003_v5_seqkit_RESUME_Alias_AutoDetect_v3_NameLikeNCBI4.sh  virus_genomes_pipeline_bioinf_AP.sh
cli/: pyproject.toml  setup.py
cli/blastdbbuilder/: __init__.py  cli.py
cli/blastdbbuilder/scripts/: Plant_Reference_Genome_Downloader_RESUME_mode.sh  archaea_ref_genomes_pipeline_bioinf_AP.sh  fasta-concat_20251014_AP.sh
docs/: CLI_README.md  GUI_README.md  HPC_README.md  WSL_GUI_README.md  WSL_README.md
gui/: README.md  pyproject.toml
gui/app/: run_gui.sh
gui/blastdbbuilder_gui/: gui.py
