[build-system]
# Use setuptools and wheel for building the package
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blastdbbuilder"
version = "1.0.0"
description = "A bioinformatics utility to automate custom BLAST database construction with duplicate ID resolution and containerized workflow."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Asad Prodhan", email = "prodhan82@gmail.com" }
]
requires-python = ">=3.8"
keywords = ["bioinformatics", "blast", "genomics", "ncbi", "database"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "click",
    "tqdm",
    "biopython",
]

[project.urls]
Homepage = "https://github.com/AsadProdhan/blastdbbuilder"
Repository = "https://github.com/AsadProdhan/blastdbbuilder"

[tool.setuptools]
# Include CLI entry point
packages = ["blastdbbuilder"]
include-package-data = true

[project.scripts]
blastdbbuilder = "blastdbbuilder.cli:main"
