[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blastdbbuilder"
version = "1.0.0"
description = "Automated genome download, concatenation, and BLAST database builder"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
  { name = "Asad Prodhan", email = "prodhan82@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/AsadProdhan/blastdbbuilder"
Repository = "https://github.com/AsadProdhan/blastdbbuilder"

[project.scripts]
blastdbbuilder = "blastdbbuilder.cli:main"
